polished article added minor nav visual tweaks fixed the a tag wrapping the work examples landing page and changed the color of the list items on that page

--- a/_sass/core/_code.scss
+++ b/_sass/core/_code.scss
@@ -1,9 +1,10 @@
-pre, pre code, code{
+figure pre, figure pre code, pre, pre code, code{
 	background: $black-grey;
-	color: $green;
+	color: $med-grey;
 }
 
-pre code{
+pre code,
+figure pre{
 	display: block;
 	padding: 16px;
 	span{display: inline;}
