--- a/_sass/core/_typography.scss
+++ b/_sass/core/_typography.scss
@@ -175,7 +175,7 @@ sub,sup {
 sup {top: -0.5em;}
 sub {bottom: -0.25em;}
 
-code,kbd,samp {
+pre,code,kbd,samp {
 	font-family: monospace, serif;
 	font-family: 'Roboto Mono', monospace;
 	font-size: 16px;
