--- a/_sass/pages/_work_page.scss
+++ b/_sass/pages/_work_page.scss
@@ -1,11 +1,3 @@
-// $colors: $yellow $red $green $blue ;
-
-// @for $i from 1 through length($colors) {
-// 	.work-thumbs-wrapper:nth-child(#{length($colors)}n+#{$i}) {
-// 		background: nth($colors, $i);
-// 	}
-// }
-
 .work-thumbs-wrapper{
 	width: 100%;
 	overflow: auto;
@@ -31,29 +23,6 @@
 			max-width: 100%;
 		}
 	}
-
-	// &.layout-b{
-	// 	.work-teaser{
-	// 		width: 40%;
-	// 		float: left;
-	// 	}
-	// 	.work-teaser + div{
-	// 		width: 60%;
-	// 		float: left;
-	// 	}
-	// }
-
-	// &.layout-c{
-	// 	.work-teaser{
-	// 		width: 70%;
-	// 		float: left;
-	// 	}
-	// 	.work-teaser + div{
-	// 		width: 30%;
-	// 		float: left;
-	// 	}
-	// }
-
 	.work-teaser + div{
 		img{ 
 			display: inline-block; 
@@ -65,25 +34,13 @@
 ul.tech-tech-list{
 	width: 100%;
 	display: inline-block;
+	margin-bottom: $ms-1;
 
 	li{
-		// background: $green;
-		color: $green;
 		font-family: $sofia-regular;
 		font-size: $ms-1;
 		display: inline-block;
 		width: auto;
-		// padding: 12px 9px;
-		padding: 0 12px;
-		border-right: 1px solid $med-grey;
-		
-		&:first-of-type{
-			padding: 0 12px 0 0;
-		}
-
-		&:last-of-type{
-			border-right: none;
-		}
 	}
 }
 
