--- a/_sass/templates/_post_template.scss
+++ b/_sass/templates/_post_template.scss
@@ -56,7 +56,7 @@
 		display: inline;
 	}
 	figure{
-		padding: $ms--2 0 $ms-0 0;
+		padding: $ms-3 0;
 		img, code, pre{
 			margin: 0 auto;
 			display: block;
